src/test/deca/syntax/valid/homemade/test/test_pars_val_class_decl_field_mult_et_main.deca
// Description:
//    Programme minimaliste testant l'arbre d'instruction pour une class multiple et main
//
// Resultats:
//    
//
// Historique:
//    cree le 01/01/2023

class iden {
    
}


class b{

}

class a extends b{
    
}


{
    main_non_vide;
}