src/test/deca/syntax/invalid/homemade/parser/test/test_pars_inv_class_oubli_accolade.deca
// Description:
//    tests de programme incorrect syntaxiquement pour les class
//
// Resultats:
//    Ligne 11 : Erreur (oubli extends)
//    
//
// Historique:
//    cree le 04/01/2023

class b{

}

class a extends b